--- a/css/projects.css
+++ b/css/projects.css
@@ -37,11 +37,11 @@
     flex-direction: row;
     width: 100%;
     justify-content: space-around;
-    font-size: 1.7rem;
   }
   .nav-link {
     text-decoration: none;
     font-weight: 500;
+    font-size: 1.7rem;
   }
   .nav-link:hover {
     font-weight: 700;
@@ -101,10 +101,6 @@
     }
     #nav-bar{
       margin-top:4rem;
-    }
-    .nav-link{
-      font-size: 2rem;
-      font-weight: 600;
     }
     #projects-list {
       flex-direction: column;
